we added full pages and turn to menu to modify it with language switcher

--- a/about-us.html
+++ b/about-us.html
@@ -38,18 +38,16 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
-
-                    </select>
+                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
+                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
+                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
+                    </ul>
                 </div>
                 <div class="register btn">
-                    <a  href="#">Register New Guest</a>
+                    <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">Sign in</a>
+                    <a  href="index.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -88,85 +86,85 @@
 
     <div class="container">
         <div class="section-title">
-            <h2><a href="#">
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3s"><a href="#">
                 Hotel Sections
             </a></h2>
         </div>
         <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
                 <h2>
                     <a href="my-hotel-info.html">
                         My Hotel Info
                     </a>
                 </h2>
             </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
                 <h2>
                     <a href="hotek-guest.html">
                         My Hotel Guests Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.3s">
                 <h2>
                     <a href="cities.html">
                         Hotel Cities Report                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.6s">
                 <h2>
                     <a href="hotel-rooms.html">
                         Hotel Rooms Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.9s">
                 <h2>
                     <a href="#">
                         Offer Of The Month
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.2s">
                 <h2>
                     <a href="withdraw-profits.html">
                         Withdraw Profits                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.5s">
                 <h2>
                     <a href="#">
                         My Hotel Info
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.8s">
                 <h2>
                     <a href="forget-password.html">
 forget password                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="7s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.1s">
                 <h2>
                     <a href="#">
                         Hotel Cities Report                    </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="7s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.4s">
                 <h2>
                     <a href="#">
                         Hotel Rooms Report
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="8s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.7s">
                 <h2>
                     <a href="#">
                         Offer Of The Month
                     </a>
                 </h2>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="8s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
                 <h2>
                     <a href="#">
                         Withdraw Profits                    </a>
