--- a/registration-success-message.html
+++ b/registration-success-message.html
@@ -20,21 +20,21 @@
 <!-- start of form-->
 <section id="Congratulations">
     <div class="form-title">
-        <h2><a href="#">
+        <h2 class="fadeInLeft wow" data-wow-delay="1s" data-wow-duration="1s"><a href="#">
             Congratulations
         </a></h2>
     </div>
 
     <div class="container">
       <div class="congratulation-text">
-        <p>
+        <p class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
             Your virtual room has been successfully opened <br>
             You became a guest in a digital hotel<br>
             And your digital hotel was successfully opened<br>
             And you become an investor in 10 cities <br>
             You can start your business commitment from now<br>
         </p>
-  <p>
+          <p class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="3s">
       Your hotel number is the same as your digital key <br>
 
       Your hotel number is :
@@ -47,7 +47,7 @@
       </div>
 
 
-            <a  href="" class="submit wow rollOut"  data-wow-duraton="1s"  >Go To Hotel Sections </a>
+            <a  href="about-us.html" class="submit wow fadeInLeft"  data-wow-duraton="2s" data-wow-delay="4s"  >Go To Hotel Sections </a>
 
     </div>
 </section>
