--- a/empty.html
+++ b/empty.html
@@ -39,18 +39,16 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
-
-                    </select>
+                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
+                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
+                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
+                    </ul>
                 </div>
                 <div class="register btn">
-                    <a  href="#">Register New Guest</a>
+                    <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">Sign in</a>
+                    <a  href="index.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
