--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -40,18 +40,16 @@
             <div class="addational-register">
                 <div class="language btn">
                     <label for="language-switcher"></label>
-                    <select name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <option value="#">
-                            English</option>
-                        <option value="#">Arabic</option>
-
-                    </select>
+                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
+                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
+                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
+                    </ul>
                 </div>
                 <div class="register btn">
-                    <a  href="#">Register New Guest</a>
+                    <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">Sign in</a>
+                    <a  href="index.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -99,7 +97,7 @@
             </a></h2>
         </div>
         <div class="hotel-info">
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                 Hotel Owner Name :
                 <span>xxxxxx</span>
             </h3>
@@ -107,7 +105,7 @@
                 Email : Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
                  Phone :
                 <span>xxxxxx</span>
             </h3>
@@ -115,21 +113,21 @@
                 Birth Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
                 Country :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="4s" >
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s" >
                 Gender :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
                 Hotel Open Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="5s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="6s">
+            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
                 You Have Registered as a Guest in Hotel Number :
                 <span>xxxxxx</span>
             </h3>
