--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -44,10 +44,10 @@
                     </ul>
                 </div>
                 <div class="register btn">
-                    <a  href="#">Register New Guest</a>
+                    <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="#">Sign in</a>
+                    <a  href="index.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -84,7 +84,7 @@
 <!-- start of form-->
 <section id="form">
     <div class="form-title">
-        <h2><a href="#">
+        <h2 class="wow fadeInLeft" data-wow-duraton="2s"  data-wow-delay="1s"><a href="#" >
          Register New Guest
         </a></h2>
     </div>
@@ -92,12 +92,12 @@
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
+            <div class="form-group wow fadeInLeft"  data-wow-duration="2s" data-wow-delay="2s">
                 <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number (how invite you) ">
+                <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number  ">
             </div>
 
-            <a href="about-us.html" class="submit wow rollOut"  data-wow-duraton="1s"  >Next Step</a>
+            <a href="register-new-guest-2.html" class="submit wow fadeInLeft"  data-wow-duraton="2s"  data-wow-delay="4s" >Next Step</a>
         </form>
     </div>
 </section>
