--- a/business-commitment.html
+++ b/business-commitment.html
@@ -43,12 +43,25 @@
 
             <!--        second logo -->
             <div class="addational-register">
-                <div class="language btn">
-                    <label for="language-switcher"></label>
-                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
-                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
-                    </ul>
+
+                <div class="switch-lang">
+                    <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                        <p class="lang-text">English</p>
+                    </div>
+                    <div class="lang-dropdown">
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                            <p class="lang-text">Español</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                            <p class="lang-text">Français</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                            <p class="lang-text">Italiano</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                            <p class="lang-text">Deutsch</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
@@ -58,32 +71,33 @@
                 </div>
             </div>
             <!--        addational-register-->
+        </div>
 
-        </div>
-        <div class="menu-mobile">
-            <a class="icon-span">
-                <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
-            </a>
-        </div>
-        <nav class="nav-bottom">
-            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1" >
-                <li><a href="index.html">
-                    Home
-                </a></li>
-                <li><a href="about-us.html">
-                    About Us
-                </a></li>
-                <li><a href="empty.html">
-                    Buy Digital Key
-                </a></li>
-                <li><a href="empty.html">
-                    FAQ
-                </a></li>
-                <li><a href="contact.html">
-                    Contact Us
-                </a></li>
-            </ul>
-        </nav>
+    </div>
+    <div class="menu-mobile">
+        <a class="icon-span">
+            <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+        </a>
+    </div>
+    <nav class="nav-bottom">
+        <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1" >
+            <li><a href="index.html">
+                Home
+            </a></li>
+            <li><a href="about-us.html">
+                About Us
+            </a></li>
+            <li><a href="empty.html">
+                Buy Digital Key
+            </a></li>
+            <li><a href="empty.html">
+                FAQ
+            </a></li>
+            <li><a href="contact.html">
+                Contact Us
+            </a></li>
+        </ul>
+    </nav>
     </div>
 </section>
 
