--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@
 
             <!--        second logo -->
             <div class="addational-register">
-                <div class="language btn">
-                    <label for="language-switcher"></label>
-                    <ul name="#" id="language-switcher" class="wow bounceIn" data-wow-duration="1s" >
-                        <li><a href="index-rtl.html"><img src="img/egypt.png" width="30" alt="">Arabic</a></li>
-                        <li><a href="index.html"><img src="img/usa.jpg" width="30" alt="">English</a></li>
-                    </ul>
+
+                <div class="switch-lang">
+                    <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                        <p class="lang-text">English</p>
+                    </div>
+                    <div class="lang-dropdown">
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                            <p class="lang-text">Español</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                            <p class="lang-text">Français</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                            <p class="lang-text">Italiano</p>
+                        </div>
+                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                            <p class="lang-text">Deutsch</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
@@ -50,6 +63,7 @@
                 </div>
             </div>
             <!--        addational-register-->
+        </div>
 
         </div>
         <div class="menu-mobile">
