--- a/empty.html
+++ b/empty.html
@@ -18,7 +18,7 @@
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo">
+            <div class="logo wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
@@ -26,7 +26,7 @@
                 <img src="img/second-logo.png" alt="logo">
                 <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" >
+                    <h2  class="wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -74,7 +74,7 @@
         </a>
     </div>
     <nav class="nav-bottom">
-        <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1" >
+        <ul  >
             <li><a href="index.html">
                 Home
             </a></li>
