--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo">
+            <div class="logo wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
@@ -24,7 +24,7 @@
                 <img src="img/second-logo.png" alt="logo">
                 <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" >
+                    <h2  class="wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -72,7 +72,7 @@
             </a>
         </div>
         <nav class="nav-bottom">
-            <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1" >
+            <ul  >
                 <li><a href="index.html">
                     Home
                 </a></li>
@@ -105,15 +105,15 @@
     <div class="container">
 
     <form action="#" class="form">
-            <div class="form-group wow rotateInUpLeft"  data-wow-duration="1s" >
+            <div class="form-group " >
                 <label for="number"></label>
                 <input type="text" class="form-control" id="number" placeholder="Enter your hotel number">
             </div>
-            <div class="form-group wow rotateInUpLeft"  data-wow-duraton="1s">
+            <div class="form-group ">
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
             </div>
-            <button class="submit wow rollOut"  data-wow-duraton="1s"  >Sign Up</button>
+            <button class="submit "    >Sign Up</button>
         </form>
     </div>
 </section>
