--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -17,7 +17,7 @@
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo">
+            <div class="logo wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
@@ -25,7 +25,7 @@
                 <img src="img/second-logo.png" alt="logo">
                 <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow slideInLeft" data-wow-duration="1s" >
+                    <h2  class="wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -73,7 +73,7 @@
         </a>
     </div>
     <nav class="nav-bottom">
-        <ul class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1" >
+        <ul  >
             <li><a href="index.html">
                 Home
             </a></li>
@@ -98,7 +98,7 @@
 <!-- start of form-->
 <section id="form">
     <div class="form-title">
-        <h2 class="wow fadeInLeft" data-wow-duraton="2s"  data-wow-delay="1s"><a href="#" >
+        <h2><a href="#" >
          Register New Guest
         </a></h2>
     </div>
@@ -106,12 +106,12 @@
     <div class="container">
 
         <form action="#" class="form">
-            <div class="form-group wow fadeInLeft"  data-wow-duration="2s" data-wow-delay="2s">
+            <div class="form-group">
                 <label for="number"></label>
                 <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number  ">
             </div>
 
-            <a href="register-new-guest-2.html" class="submit wow fadeInLeft"  data-wow-duraton="2s"  data-wow-delay="4s" >Next Step</a>
+            <a href="register-new-guest-2.html" class="submit" >Next Step</a>
         </form>
     </div>
 </section>
