--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s">
+            <div class="logo wow fadeInUp" data-wow-duration="3s" data-wow-delay="1s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
@@ -26,7 +26,7 @@
                 <img src="img/second-logo.png" alt="logo">
                 <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow fadeInDown" data-wow-duration="2s" data-wow-delay="2s" >
+                    <h2  class="wow fadeInDown" data-wow-duration="3s" data-wow-delay="1s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
