--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="nav">
     <div class="container">
         <div class="nav-top">
-            <div class="logo wow fadeInUp" data-wow-duration="3s" data-wow-delay="1s">
+            <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
                 <img src="img/logo.png" alt="logo">
             </div>
             <!--        logo -->
@@ -24,7 +24,7 @@
                 <img src="img/second-logo.png" alt="logo">
                 <img src="img/second-logo2.png" alt="">
                 <div class="text-second-logo" >
-                    <h2  class="wow fadeInDown" data-wow-duration="3s" data-wow-delay="1s" >
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
@@ -97,7 +97,7 @@
 <!-- start of form-->
 <section id="form">
         <div class="form-title">
-            <h2><a href="#">
+            <h2 class=" wow fadeInLeft" data-wow-duration="1.9s" data-wow-delay="1s"><a href="#">
                 Login To Your Hotel Account
             </a></h2>
         </div>
