we made more options and mofications

--- a/about-us.html
+++ b/about-us.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about/custom-style.css">
@@ -74,21 +75,21 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
         </ul>
     </nav>
-    </div>
+
 </section>
 <!-- mobile menu-->
 <section id="nav-mobile">
@@ -133,7 +134,7 @@
                 <!--          text-second-logo  -->
                 <div class="menu-mobile">
                     <a class="icon-span">
-                        <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+                        <i class="fas fa-bars"></i>
                     </a>
                 </div>
 
@@ -152,16 +153,16 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
             <li><a href="#">
@@ -176,95 +177,136 @@
     </nav>
 
 </section>
-<!-- end of nav-->
 <!-- start of form-->
 <section id="sections">
 
     <div class="container">
         <div class="section-title">
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3s"><a href="#">
+
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            >
+            <a href="#">
                 Hotel Sections
-            </a></h2>
+                <i class="fas fa-chevron-right"></i>
+            </a>
+       </h2>
+
         </div>
         <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
+               <a href="my-hotel-info.html">
                 <h2>
-                    <a href="my-hotel-info.html">
+
                         My Hotel Info
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+               </a>
             </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
+            <div class="section-field wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
+                <a href="hotek-guest.html">
                 <h2>
-                    <a href="hotek-guest.html">
+
                         My Hotel Guests Report
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.3s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
+                <a href="cities.html">
                 <h2>
-                    <a href="cities.html">
-                        Hotel Cities Report                    </a>
+
+                        Hotel Cities Report
+                        <i class="fas fa-chevron-right"></i>
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.6s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
+                <a href="hotel-rooms.html">
                 <h2>
-                    <a href="hotel-rooms.html">
+
                         Hotel Rooms Report
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="3.9s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
+                <a href="#">
                 <h2>
-                    <a href="#">
+
                         Offer Of The Month
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.2s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+                <a href="withdraw-profits.html">
                 <h2>
-                    <a href="withdraw-profits.html">
-                        Withdraw Profits                    </a>
+
+                        Withdraw Profits
+                        <i class="fas fa-chevron-right"></i>
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.5s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+                <a href="#"></a>
                 <h2>
-                    <a href="#">
+
                         My Hotel Info
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4.8s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+                <a href="forget-password.html">
                 <h2>
-                    <a href="forget-password.html">
-forget password                    </a>
+
+forget password
+<i class="fas fa-chevron-right"></i>
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.1s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.3s">
+                <a href="#">
                 <h2>
-                    <a href="#">
-                        Hotel Cities Report                    </a>
+
+                        Hotel Cities Report
+                        <i class="fas fa-chevron-right"></i>
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.4s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.3s">
+                <a href="#">
                 <h2>
-                    <a href="#">
+
                         Hotel Rooms Report
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="5.7s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.6s">
+                <a href="#">
                 <h2>
-                    <a href="#">
+
                         Offer Of The Month
-                    </a>
+                        <i class="fas fa-chevron-right"></i>
+
                 </h2>
+            </a>
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="6s">
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.6s">
+                <a href="#">
                 <h2>
-                    <a href="#">
-                        Withdraw Profits                    </a>
+
+                        Withdraw Profits
+                        <i class="fas fa-chevron-right"></i>
                 </h2>
+            </a>
             </div>
 
         </div>
@@ -275,13 +317,15 @@ forget password                    </a>
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow fadeOutLeft" data-wow-duraton="2s"  alt="footer-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
