--- a/my-hotel-info.html
+++ b/my-hotel-info.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href='css/animate.css'>
     <link rel="stylesheet" href="css/style.css">
 
@@ -76,21 +77,21 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
         </ul>
     </nav>
-    </div>
+
 </section>
 <!-- mobile menu-->
 <section id="nav-mobile">
@@ -135,7 +136,7 @@
                 <!--          text-second-logo  -->
                 <div class="menu-mobile">
                     <a class="icon-span">
-                        <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+                        <i class="fas fa-bars"></i>
                     </a>
                 </div>
 
@@ -154,16 +155,16 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
             <li><a href="#">
@@ -178,53 +179,53 @@
     </nav>
 
 </section>
-
 <!-- end of nav-->
 <!-- start of form-->
 <section id="sections">
 <!--
 -->
     <div class="container">
-        <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
+        <div class="section-back wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s">
+            <a href="about-us.html">Back to Hotel  Sections
+            </a>
         </div>
         <div class="section-title">
-            <h2><a href="#">
+            <h2  class=" wow fadeInLeft" data-wow-duration="2s" data-wow-delay="1s"><a href="#">
                 My Hotel Info:
             </a></h2>
         </div>
         <div class="hotel-info">
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                 Hotel Owner Name :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
-                Email : Phone :
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
+                Email :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                  Phone :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                 Birth Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                 Country :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3s" >
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s" >
                 Gender :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                 Hotel Open Date :
                 <span>xxxxxx</span>
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
             </h3>
-            <h3 class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="3.5s">
+            <h3 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay="1s">
                 You Have Registered as a Guest in Hotel Number :
                 <span>xxxxxx</span>
             </h3>
@@ -236,13 +237,15 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png" alt="footer-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
