--- a/empty.html
+++ b/empty.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/empty/custom-style.css">
@@ -13,8 +14,7 @@
 </head>
 <body>
 
-
-<!-- start of  nav-->
+<!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
         <div class="nav-top">
@@ -30,7 +30,7 @@
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
-
+                    <p>for best content view , go to desktop , laptop </p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
@@ -52,7 +52,8 @@
                         <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
                             <p class="lang-text">Italiano</p>
                         </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                        <div class="selecting-lang">
+                            <img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png" alt=""/>
                             <p class="lang-text">Deutsch</p>
                         </div>
                     </div>
@@ -68,39 +69,120 @@
         </div>
 
     </div>
-    <div class="menu-mobile">
-        <a class="icon-span">
-            <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
-        </a>
-    </div>
+
     <nav class="nav-bottom">
         <ul  >
-            <li><a href="index.html">
+            <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
         </ul>
     </nav>
-    </div>
+
 </section>
-<!-- end of nav-->
+<!-- mobile menu-->
+<section id="nav-mobile">
+    <div class="container">
+        <div class="mobile-logo">
+            <img src="img/second-logo.png" alt="logo">
+            <img src="img/second-logo2.png" alt="">
+        </div>
+        <div class="nav-top">
+
+            <!--        logo -->
+            <div class="second-logo">
+                <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <div class="text-second-logo" >
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
+                        <span>Pyramid Challenge</span>
+                        <span>Digital Hotels</span>
+                    </h2>
+                    <div class="switch-lang">
+                        <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                            <p class="lang-text">English</p>
+                        </div>
+                        <div class="lang-dropdown">
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                                <p class="lang-text">Español</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                                <p class="lang-text">Français</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                                <p class="lang-text">Italiano</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                                <p class="lang-text">Deutsch</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--          text-second-logo  -->
+                <div class="menu-mobile">
+                    <a class="icon-span">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </div>
+
+            </div>
+            <div class="quote-text">
+                <p>for best content view , go to desktop , laptop </p>
+            </div>
+            <!--        second logo -->
+
+        </div>
+
+    </div>
+
+    <nav class=" nav-bottom-mobile">
+        <ul  >
+            <li><a href="https://www.pyramid-challenge.com">
+                Home
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
+                About Us
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+                Buy Digital Key
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/faq">
+                FAQ
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
+                Contact Us
+            </a></li>
+            <li><a href="#">
+                Register New Guest
+            </a></li>
+            <li>
+                <a href="#">
+                    Sign in
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+</section>
 <!-- start of form-->
 <section id="sections-empty">
 
     <div class="container">
         <div class="section-back wow fadeInLeft" data-wow-delay="1s" data-wow-duration="1s">
-            <a href="about-us.html">Back to Sections</a>
+            <a href="about-us.html">Back to Sections  <i class="fas fa-chevron-right"></i></a>
         </div>
 
     </div>
@@ -110,13 +192,15 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
-        <div class="copyright-logo wow fadeInLeft" data-wow-duration="2s">
-            <img src="img/footer-logo.png" alt="footer-logo">
+        <div class="copyright-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
