--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -66,28 +67,28 @@
             <!--        addational-register-->
         </div>
 
-        </div>
-
-        <nav class="nav-bottom">
-            <ul  >
-                <li><a href="https://www.pyramid-challenge.com">
-                    Home
-                </a></li>
-                <li><a href="about-us.html">
-                    About Us
-                </a></li>
-                <li><a href="empty.html">
-                    Buy Digital Key
-                </a></li>
-                <li><a href="empty.html">
-                    FAQ
-                </a></li>
-                <li><a href="contact.html">
-                    Contact Us
-                </a></li>
-            </ul>
-        </nav>
     </div>
+
+    <nav class="nav-bottom">
+        <ul  >
+            <li><a href="https://www.pyramid-challenge.com">
+                Home
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
+                About Us
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
+                Buy Digital Key
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/faq">
+                FAQ
+            </a></li>
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
+                Contact Us
+            </a></li>
+        </ul>
+    </nav>
+
 </section>
 <!-- mobile menu-->
 <section id="nav-mobile">
@@ -132,7 +133,7 @@
                 <!--          text-second-logo  -->
                 <div class="menu-mobile">
                     <a class="icon-span">
-                        <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+                        <i class="fas fa-bars"></i>
                     </a>
                 </div>
 
@@ -151,16 +152,16 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
             <li><a href="#">
@@ -195,7 +196,9 @@
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
             </div>
-            <button class="submit "    >Sign Up</button>
+            <button class="submit ">Sign Up
+                <i class="fas fa-chevron-right"></i>
+        </button>
         </form>
     </div>
 </section>
@@ -204,13 +207,15 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
