--- a/registration-success-message.html
+++ b/registration-success-message.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/info/success-message.css">
@@ -20,21 +21,21 @@
 <!-- start of form-->
 <section id="Congratulations">
     <div class="form-title">
-        <h2 class="fadeInLeft wow" data-wow-delay="1s" data-wow-duration="1s"><a href="#">
+        <h2 ><a href="#">
             Congratulations
         </a></h2>
     </div>
 
     <div class="container">
       <div class="congratulation-text">
-        <p class="wow fadeInLeft" data-wow-duration="2s" data-wow-delay="2s">
+        <p >
             Your virtual room has been successfully opened <br>
             You became a guest in a digital hotel<br>
             And your digital hotel was successfully opened<br>
             And you become an investor in 10 cities <br>
             You can start your business commitment from now<br>
         </p>
-          <p class="wow fadeInLeft" data-wow-duration="3s" data-wow-delay="3s">
+          <p >
       Your hotel number is the same as your digital key <br>
 
       Your hotel number is :
@@ -47,7 +48,9 @@
       </div>
 
 
-            <a  href="about-us.html" class="submit wow fadeInLeft"  data-wow-duraton="2s" data-wow-delay="4s"  >Go To Hotel Sections </a>
+            <a  href="about-us.html" class="submit " >Go To Hotel Sections
+                <i class="fas fa-chevron-right"></i>
+</a>
 
     </div>
 </section>
