--- a/withdraw-profits.html
+++ b/withdraw-profits.html
@@ -6,6 +6,7 @@
 
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/info/hotel-room.css">
@@ -76,21 +77,21 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
         </ul>
     </nav>
-    </div>
+
 </section>
 <!-- mobile menu-->
 <section id="nav-mobile">
@@ -135,7 +136,7 @@
                 <!--          text-second-logo  -->
                 <div class="menu-mobile">
                     <a class="icon-span">
-                        <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+                        <i class="fas fa-bars"></i>
                     </a>
                 </div>
 
@@ -154,16 +155,16 @@
             <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
-            <li><a href="about-us.html">
+            <li><a href="https://www.pyramid-challenge.com/about-us ">
                 About Us
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
                 Buy Digital Key
             </a></li>
-            <li><a href="empty.html">
+            <li><a href="https://www.pyramid-challenge.com/faq">
                 FAQ
             </a></li>
-            <li><a href="contact.html">
+            <li><a href="https://www.pyramid-challenge.com/contact-us ">
                 Contact Us
             </a></li>
             <li><a href="#">
@@ -178,6 +179,7 @@
     </nav>
 
 </section>
+<!-- end of nav-->
 <!-- end of nav-->
 <section id="sections-hotel">
     <div class="container">
@@ -362,13 +364,15 @@ Withdraw Profits
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="index.html">
+                <a href="https://www.pyramid-challenge.com/terms-conditions">
                     Copyright© Direct. All Rights Reserved.terms&conditions
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <img src="img/footer-logo.png"  class="wow fadeOutLeft" data-wow-duraton="2s"  alt="footer-logo">
+            <a href="https://www.pyramid-challenge.com/terms-conditions">
+                <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
+            </a>
         </div>
     </div>
 </footer>
