we added menu full identical like site

--- a/about-us.html
+++ b/about-us.html
@@ -233,7 +233,7 @@
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.5s">
-                <a href="#">
+                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
                 <h2>
 
                         Offer Of The Month
@@ -255,56 +255,57 @@
                 <a href="#"></a>
                 <h2>
 
-                        My Hotel Info
-                        <i class="fas fa-chevron-right"></i>
+                    Your Business Commitment
+                    <i class="fas fa-chevron-right"></i>
 
                 </h2>
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
-                <a href="forget-password.html">
+                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
                 <h2>
 
-forget password
+                    share post via facebook
 <i class="fas fa-chevron-right"></i>
                 </h2>
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.3s">
-                <a href="#">
+                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
                 <h2>
 
-                        Hotel Cities Report
+                    share video via facebook
                         <i class="fas fa-chevron-right"></i>
                 </h2>
             </a>
             </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.6s">
+                <a href="#">
+                    <h2>
+
+                        Change Hotel Password
+                        <i class="fas fa-chevron-right"></i>
+                    </h2>
+                </a>
+            </div>
+
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.3s">
-                <a href="#">
+                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
                 <h2>
 
-                        Hotel Rooms Report
-                        <i class="fas fa-chevron-right"></i>
+                    Share us your idea
+                    <i class="fas fa-chevron-right"></i>
 
                 </h2>
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.6s">
-                <a href="#">
+                <a href="https://www.pyramid-challenge.com ">
                 <h2>
 
-                        Offer Of The Month
+                    Log Out Hotel Account
                         <i class="fas fa-chevron-right"></i>
 
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2.6s">
-                <a href="#">
-                <h2>
-
-                        Withdraw Profits
-                        <i class="fas fa-chevron-right"></i>
                 </h2>
             </a>
             </div>
